# tlustynn

./: MANIFEST.in  README.md  pyproject.toml  setup.py
scripts/: evaluate.py  train.py
tlustynn/: __init__.py  api.py  config.py  data_loader.py  model.py  physics.py  predict.py  read_write_tlusty.py  train.py  utils.py
tlustynn/checkpoints/: avg_tau_physical.npy  stats.json
